<resources>
    <string name="cheero_app_splash_skip">%s 跳过</string>
    <string name="cheero_app_title_activity_main">MainActivity</string>
    <string name="cheero_app_title_activity_settings">Settings</string>
    <!-- RequestActivity -->
    <string name="cheero_app_request_hello">Send Hello</string>
    <string name="cheero_app_request_ocr_idcard">Send IDCardOCR</string>
    <!--  AboutServiceActivity  -->
    <string name="cheero_app_about_service_start_cheero_service">启动CheeroService</string>
    <string name="cheero_app_about_service_stop_cheero_service">关闭CheeroService</string>
    <string name="cheero_app_about_service_bind_cheero_service">绑定CheeroService</string>
    <string name="cheero_app_about_service_unbind_cheero_service">解绑CheeroService</string>
    <string name="cheero_app_about_service_call_cheero_service">调用CheeroService的方法</string>
    <string name="cheero_app_about_service_start_cheero_intent_service">启动CheeroIntentService</string>
    <string name="cheero_app_about_service_stop_cheero_intent_service">关闭CheeroIntentService</string>
    <!--  UserAidlClientActivity  -->
    <string name="cheero_app_user_aidl_client_add_user">添加用户</string>
    <string name="cheero_app_user_aidl_client_get_list">用户列表</string>
    <!--  AsyncTaskActivity  -->
    <string name="cheero_app_async_task_add">添加任务</string>
    <string name="cheero_app_async_task_execute">执行任务</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="cheero_app_activity_feature_lollipop">Android 5.0</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>

